# clx-hermes-call

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  publish.yml
docs/: hermes-cli-contract.md
skills/hermes-call/: SKILL.md
src/cluxion_hermes_call/: __init__.py  api.py  cli.py  config.py  core.py  doctor.py  jobs.py  plugin.py  sessions.py
src/cluxion_hermes_call/doctor/: __init__.py  catalog.json  framework.py  probes.py
tests/: test_cli.py  test_doctor.py  test_orphan_reaper.py  test_packaging_policy.py  test_redaction.py  test_resume_flag.py  test_sandbox_root.py
