[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cluxion-hermes-call-cli"
version = "0.3.4"
description = "Use your Hermes Agent like an AI API: one-shot exec CLI (codex-exec style) with session self-cleanup"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "cluxion" }]
keywords = ["hermes", "agent", "cli", "oneshot", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[project.scripts]
hermes-call = "cluxion_hermes_call.cli:main"

[project.entry-points."hermes_agent.plugins"]
cluxion-hermes-call-cli = "cluxion_hermes_call.plugin"

[project.urls]
Repository = "https://github.com/cluxion/cluxion-Hermes-call-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/cluxion_hermes_call"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
